# Polyglot

./: .gitattributes  .gitignore  @mcp_config.json  CLAUDE.md  Cargo.toml  README.md  fix_pipes.py  map_tracker.py  pyproject.toml  rule_summary.txt
.agent/memory/: lesson_01_syntax_corrections.md
.agent/personas/: aljam3_coder.md  dev_team.md  polyglot_coder.md  product_owner.md  scrum_master.md
.agent/workflows/: aj3_generate.md  aj3_train_code.md  aj3_train_lexer.md  github_sync.md  jm3_train_lexer.md  paul_brainstorm.md  paul_draft.md  paul_help.md  paul_issues.md  paul_merge.md  paul_work_issue.md  pg_generate.md  pg_train.md  pg_train_code.md  pg_train_lexer.md
.agents/: brand-creative-brief.md  product-marketing-context.md
.bmad-core/: install-manifest.yaml
.github/: linguist.yml
.github/workflows/: ci.yml  validate-docs.yml
.obsidian/: workspace.json
.paul/: HANDOFF-2026-03-24.md  HANDOFF-2026-03-29.md  HANDOFF-2026-04-09b.md  HANDOFF-2026-04-11.md  HANDOFF-2026-04-15.md  PROJECT.md  ROADMAP.md  SPECIAL-FLOWS.md  STATE.md
.paul/research/: right-nosql-db.md
Aljam3 Logo/AI/: Logo.ai
Aljam3 Logo/EPS/: Icon Dark.eps  Icon Light.eps  Icon-dark.eps  Icon.eps  Logo Dark.eps  Logo Light.eps  Logo-dark.eps  Logo.eps
Polyglot Logo/: logo.py
Polyglot Logo/AI/: Icon.ai
Polyglot Logo/EPS/: Icon-dark.eps  Icon-light.eps  Icon.eps  Logo-light.eps  Logo.eps
Polyglot/Lexer/: RegexPatternBuilder.py  example.pg  polyglot_element_data.json  polygolt_complier.py  time_datatype.py  tokens.py  tokens_enum.py
Polyglot/Tree/: tree.py
_bmad-output/brainstorming/: brainstorming-session-2026-04-21-001.md  brainstorming-session-2026-04-21-002.md
bmad/bmb/: config.yaml
bmad/bmm/: config.yaml
bmad/cis/: config.yaml
doc/: 01-getting-started.md  02-language-syntax.md  04-package-management.md  05-standard-library.md  06-error-handling.md  07-flow-control.md  09-architecture.md  12-development-roadmap.md  13-contributing.md  DOCUMENTATION_INDEX.md
docs/: AUDIT-INCONSISTENCIES.md  AUDIT-TODO.md  BLOCK-MARKER-REMOVAL-SUMMARY.md  DOCUMENTATION-HIERARCHY.md  INDEX-NEW.md  INDEX.md  INTEGRATION-REPORT-2025-12-27.md  LEXER-PARSER-SESSION-SUMMARY-2025-11-26.md  README.md  STRING-LITERALS-UPDATE-SUMMARY.md  VARIABLES-EXECUTIVE-SUMMARY.md  _changelog.md  _conventions.md  _index.yaml  _tags.md  ai-retrieval-index.md  architecture.md  bmm-workflow-status.yaml  brainstorming-session-results-2025-11-16.md  brainstorming-session-results.md  brainstorming-v0.0.5-enhancements.md  component-inventory.md  development-guide.md  draft.md  epics.md  implementation-readiness-report-2025-11-17.md  index.md  project-overview.md  source-tree-analysis.md  vision.md
docs/Agile/: CHANGE-REQUEST-001-v0.0.2-Syntax-Compliance.md  LEXER-IMPLEMENTATION-READINESS.md  README.md  SPRINT-CHANGE-PROPOSAL-v0.0.4-syntax-updates.md  agent-registry.yaml  brainstorming-session-results-2025-11-19.md  epics.md  itil-config.yaml  prd.md  product-brief-Polyglot-2025-11-15.md  sprint-plan-v0.0.4-lexer-parser.md  v0.0.2-bmad-alignment.md
docs/Audit/: DOCUMENTATION-HIERARCHY.md  _index.yaml
docs/Tech/: _index.yaml  index.md
docs/User/: DESIGN-SPECIFICATIONS-CATALOG.md  MASTER-INDEX.md  _index.yaml  index.md
docs/_templates/: audit-record.md  decision-record.md  language-spec-section.md  tech-architecture.md  tech-spec.md  user-feature-guide.md  (+1 more)
lib/: README.md
lib/aljam3-connections/: Cargo.toml
lib/aljam3-connections/examples/: demo_connection.rs
lib/aljam3-connections/src/db/: mod.rs
lib/aljam3-connections/src/messaging/: mod.rs
memory/: pg_lesson_env_inline_syntax.md  pg_lesson_permission_field_assignment.md  pg_lesson_permission_script_grant.md  pg_lesson_run_script_output_bind.md
polyglot-cli/: Cargo.toml
polyglot-db/: Cargo.toml
polyglot-ir/: Cargo.toml
polyglot-lexer/: Cargo.toml  EXTENDED-TESTING-SUMMARY.md  IMPLEMENTATION-UPDATE-2025-11-27.md  INVALID-SYNTAX-TEST-ANALYSIS.md  LEXER-TESTING-REPORT.md  LINE-CONTINUATION-IMPLEMENTATION.md  PARSER-CONSIDERATIONS.md  RANGE-OPERATOR-FIX-SUMMARY.md  SESSION-SUMMARY-2025-11-27.md
polyglot-lexer/benches/: lexer_bench.rs
polyglot-lexer/examples/: lex_comprehensive.rs  lex_conditional.rs  lex_edge_cases.rs  lex_error_detection.rs  lex_escape_sequences.rs  lex_hello_world.rs  lex_interpolation.rs  lex_invalid_syntax.rs  lex_line_continuation.rs  lex_operators.rs  lex_ranges.rs  lex_special_identifiers.rs  lex_stress_test.rs  lex_variable_states.rs
polyglot-lexer/src/: error.rs  lexer.rs  lib.rs  tests.rs  token.rs
polyglot-lexer/tests/: integration_tests.rs
polyglot-parser/: Cargo.toml
polyglot-parser/examples/: benchmark_validation.rs
polyglot-parser/src/: ast.rs  error.rs  file_registry_resolver.rs  import_resolver.rs  lib.rs  parser.rs  span.rs  validation.rs  validation_error.rs  visitor.rs
polyglot-parser/tests/: integration_tests.rs  test_new_syntax_compliance.rs
polyglot-parser/tests/fixtures/: test-missing-param.pg  test-registry.json  test-type-mismatch.pg  test-valid-pipeline.pg  test-wrong-param-name.pg
polyglot-parser/tests/fixtures/multifile-backward-ref/: file1.pg  file2.pg
polyglot-parser/tests/fixtures/multifile-duplicate/: file1.pg  file2.pg
polyglot-parser/tests/fixtures/multifile-forward-ref/: file1.pg  file2.pg
polyglot-parser/tests/fixtures/multifile-unnumbered/: file1.pg  file_no_marker.pg
polyglot-runtime-wrappers/: Cargo.toml
queue-manager/: Cargo.toml
runner/: Cargo.toml
scratch/: analyze.py  bbox.py  bbox_svg.py  color_braces_white.py  combine.py  combine2.py  extract_block.py  find_braces.py  invalid.aj3  multi_trace.py  prepare.py  swap_braces.py  test_lex.rs
scripts/: doc-reindex.py  doc-template.typ  doc-validate.py  docs-pdf-hook.sh  generate-docs-pdf.sh  setup-dev-infrastructure.sh
syntax-highlighting/: ALJAM3_SCOPES_REFERENCE.md  README.md  SYNTAX-HIGHLIGHTING-SUMMARY.md  aljam3.tmLanguage.json  polyglot.tmLanguage.json
trigger-monitor/: Cargo.toml
(+3935 files in other folders)
