[workspace]
resolver = "2"
members = [
    "polyglot-cli",
    "polyglot-lexer",
    "polyglot-parser",
    "polyglot-ir",
    "polyglot-db",
    "polyglot-runtime-wrappers",
    "trigger-monitor",
    "queue-manager",
    "runner",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Polyglot Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/polyglot-lang/polyglot"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full", "macros"] }

# Database clients
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "tls-rustls"] }
redis = { version = "0.32.7", features = ["tokio-comp"] }
influxdb2 = "0.5.2"

# Serialization
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.140"

# Error handling (all errors must be Send + Sync for async)
thiserror = "2.0.17"
anyhow = "1.0.99"

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Async utilities
async-trait = "0.1"

# Configuration
config = "0.14"
toml = "0.8"

# Date/time
chrono = "0.4"

# UUID generation
uuid = { version = "1.10", features = ["v4", "serde"] }
