[package]
name = "polyglot-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "polyglot"
path = "src/main.rs"

[dependencies]
polyglot-parser = { path = "../polyglot-parser" }
polyglot-ir = { path = "../polyglot-ir" }
polyglot-db = { path = "../polyglot-db" }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
