[package]
name = "polyglot-lexer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "lexer_bench"
harness = false
