[package]
name = "polyglot-parser"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
polyglot-lexer = { path = "../polyglot-lexer" }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"

[dev-dependencies]
