[package]
name = "trigger-monitor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
polyglot-db = { path = "../polyglot-db" }
tokio = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
influxdb2 = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
