[package]
name = "aljam3-connections"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
async-nats = "0.47.0"
bytes = "1.11.1"
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "json"] }
tokio = { version = "1.52.1", features = ["full"] }
toon-format = "0.4.5"
